[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/NokiaCellphone.tres" type="DynamicFont" id=1]
[ext_resource path="res://UI/CheckButtons.tres" type="Theme" id=2]
[ext_resource path="res://UI/OptionsMenu.gd" type="Script" id=3]
[ext_resource path="res://UI/RebindingButton.tscn" type="PackedScene" id=4]

[node name="OptionsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 1018, -189 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Center"]
margin_left = 40.0
margin_top = 90.0
margin_right = 260.0
margin_bottom = 210.0

[node name="Interaction" type="HBoxContainer" parent="Center/VBoxContainer"]
margin_right = 220.0
margin_bottom = 16.0
alignment = 1

[node name="Build" type="HBoxContainer" parent="Center/VBoxContainer/Interaction"]
margin_left = 23.0
margin_right = 72.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="Center/VBoxContainer/Interaction/Build"]
margin_top = 3.0
margin_right = 27.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 1 )
text = "Build:"

[node name="RebindButton" parent="Center/VBoxContainer/Interaction/Build" instance=ExtResource( 4 )]
margin_left = 31.0
margin_right = 49.0
margin_bottom = 16.0
custom_colors/font_color_pressed = Color( 0.65098, 0.65098, 0.65098, 1 )
action = "remove_tile"

[node name="Shoot" type="HBoxContainer" parent="Center/VBoxContainer/Interaction"]
margin_left = 76.0
margin_right = 128.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="Center/VBoxContainer/Interaction/Shoot"]
margin_top = 3.0
margin_right = 30.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 1 )
text = "Shoot:"

[node name="RebindButton" parent="Center/VBoxContainer/Interaction/Shoot" instance=ExtResource( 4 )]
margin_left = 34.0
margin_right = 52.0
margin_bottom = 16.0
custom_colors/font_color_pressed = Color( 0.65098, 0.65098, 0.65098, 1 )
action = "use_item"

[node name="Interact" type="HBoxContainer" parent="Center/VBoxContainer/Interaction"]
margin_left = 132.0
margin_right = 196.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="Center/VBoxContainer/Interaction/Interact"]
margin_top = 3.0
margin_right = 42.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 1 )
text = "Interact:"

[node name="RebindButton" parent="Center/VBoxContainer/Interaction/Interact" instance=ExtResource( 4 )]
margin_left = 46.0
margin_right = 64.0
margin_bottom = 16.0
custom_colors/font_color_pressed = Color( 0.65098, 0.65098, 0.65098, 1 )
action = "interact"

[node name="MovementRebindings" type="CenterContainer" parent="Center/VBoxContainer"]
margin_top = 20.0
margin_right = 220.0
margin_bottom = 56.0

[node name="Rebindings" type="GridContainer" parent="Center/VBoxContainer/MovementRebindings"]
margin_left = 31.0
margin_right = 188.0
margin_bottom = 36.0
columns = 2

[node name="WalkUp" type="HBoxContainer" parent="Center/VBoxContainer/MovementRebindings/Rebindings"]
margin_right = 77.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="Center/VBoxContainer/MovementRebindings/Rebindings/WalkUp"]
margin_top = 3.0
margin_right = 41.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 1 )
text = "Walk Up:"

[node name="RebindButton" parent="Center/VBoxContainer/MovementRebindings/Rebindings/WalkUp" instance=ExtResource( 4 )]
margin_left = 45.0
margin_right = 63.0
margin_bottom = 16.0
action = "move_up"

[node name="WalkRight" type="HBoxContainer" parent="Center/VBoxContainer/MovementRebindings/Rebindings"]
margin_left = 81.0
margin_right = 157.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="Center/VBoxContainer/MovementRebindings/Rebindings/WalkRight"]
margin_top = 3.0
margin_right = 54.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 1 )
text = "Walk Right:"

[node name="RebindButton" parent="Center/VBoxContainer/MovementRebindings/Rebindings/WalkRight" instance=ExtResource( 4 )]
margin_left = 58.0
margin_right = 76.0
margin_bottom = 16.0
action = "move_right"

[node name="WalkDown" type="HBoxContainer" parent="Center/VBoxContainer/MovementRebindings/Rebindings"]
margin_top = 20.0
margin_right = 77.0
margin_bottom = 36.0

[node name="Label" type="Label" parent="Center/VBoxContainer/MovementRebindings/Rebindings/WalkDown"]
margin_top = 3.0
margin_right = 55.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 1 )
text = "Walk Down:"

[node name="RebindButton" parent="Center/VBoxContainer/MovementRebindings/Rebindings/WalkDown" instance=ExtResource( 4 )]
margin_left = 59.0
margin_right = 77.0
margin_bottom = 16.0
action = "move_down"

[node name="WalkLeft" type="HBoxContainer" parent="Center/VBoxContainer/MovementRebindings/Rebindings"]
margin_left = 81.0
margin_top = 20.0
margin_right = 157.0
margin_bottom = 36.0

[node name="Label" type="Label" parent="Center/VBoxContainer/MovementRebindings/Rebindings/WalkLeft"]
margin_top = 3.0
margin_right = 48.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 1 )
text = "Walk Left:"

[node name="RebindButton" parent="Center/VBoxContainer/MovementRebindings/Rebindings/WalkLeft" instance=ExtResource( 4 )]
margin_left = 52.0
margin_right = 70.0
margin_bottom = 16.0
action = "move_left"

[node name="HBoxContainer" type="HBoxContainer" parent="Center/VBoxContainer"]
margin_top = 60.0
margin_right = 220.0
margin_bottom = 100.0

[node name="Buttons" type="VBoxContainer" parent="Center/VBoxContainer/HBoxContainer"]
margin_right = 98.0
margin_bottom = 40.0

[node name="PixelPerfect" type="CheckButton" parent="Center/VBoxContainer/HBoxContainer/Buttons"]
visible = false
margin_right = 94.0
margin_bottom = 18.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_disabled = Color( 0.388235, 0.388235, 0.388235, 1 )
custom_colors/font_color = Color( 0.827451, 0.827451, 0.827451, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.65098, 0.65098, 0.65098, 1 )
text = "Pixel Perfect"
flat = true

[node name="Vignette" type="CheckButton" parent="Center/VBoxContainer/HBoxContainer/Buttons"]
margin_right = 98.0
margin_bottom = 18.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_disabled = Color( 0.388235, 0.388235, 0.388235, 1 )
custom_colors/font_color = Color( 0.827451, 0.827451, 0.827451, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.65098, 0.65098, 0.65098, 1 )
text = "Vignette"
flat = true

[node name="PlayerTilt" type="CheckButton" parent="Center/VBoxContainer/HBoxContainer/Buttons"]
margin_top = 22.0
margin_right = 98.0
margin_bottom = 40.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_disabled = Color( 0.388235, 0.388235, 0.388235, 1 )
custom_colors/font_color = Color( 0.827451, 0.827451, 0.827451, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.65098, 0.65098, 0.65098, 1 )
text = "Player Tilting"
flat = true

[node name="Sliders" type="VBoxContainer" parent="Center/VBoxContainer/HBoxContainer"]
margin_left = 102.0
margin_right = 220.0
margin_bottom = 40.0
custom_constants/separation = 12

[node name="Screenshake" type="HBoxContainer" parent="Center/VBoxContainer/HBoxContainer/Sliders"]
margin_right = 118.0
margin_bottom = 14.0
custom_constants/separation = 6

[node name="Label" type="Label" parent="Center/VBoxContainer/HBoxContainer/Sliders/Screenshake"]
margin_right = 62.0
margin_bottom = 14.0
rect_min_size = Vector2( 0, 14 )
custom_fonts/font = ExtResource( 1 )
text = "Screenshake"
valign = 2

[node name="HSlider" type="HSlider" parent="Center/VBoxContainer/HBoxContainer/Sliders/Screenshake"]
margin_left = 68.0
margin_right = 118.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )
theme = ExtResource( 2 )
max_value = 2.0
step = 0.1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CameraLook" type="HBoxContainer" parent="Center/VBoxContainer/HBoxContainer/Sliders"]
margin_top = 26.0
margin_right = 118.0
margin_bottom = 36.0

[node name="Label" type="Label" parent="Center/VBoxContainer/HBoxContainer/Sliders/CameraLook"]
margin_right = 64.0
margin_bottom = 10.0
custom_fonts/font = ExtResource( 1 )
text = "Camera Look"

[node name="HSlider" type="HSlider" parent="Center/VBoxContainer/HBoxContainer/Sliders/CameraLook"]
margin_left = 68.0
margin_right = 118.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )
theme = ExtResource( 2 )
max_value = 1.0
step = 0.1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="Center/VBoxContainer"]
margin_top = 104.0
margin_right = 220.0
margin_bottom = 120.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_disabled = Color( 0.439216, 0, 0, 1 )
custom_colors/font_color = Color( 0.815686, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.635294, 0, 0, 1 )
text = "Back"
flat = true

[connection signal="toggled" from="Center/VBoxContainer/HBoxContainer/Buttons/PixelPerfect" to="." method="_on_PixelPerfect_toggled"]
[connection signal="toggled" from="Center/VBoxContainer/HBoxContainer/Buttons/Vignette" to="." method="_on_Vignette_toggled"]
[connection signal="toggled" from="Center/VBoxContainer/HBoxContainer/Buttons/PlayerTilt" to="." method="_on_PlayerTilt_toggled"]
[connection signal="value_changed" from="Center/VBoxContainer/HBoxContainer/Sliders/Screenshake/HSlider" to="." method="_on_screenshake_value_changed"]
[connection signal="value_changed" from="Center/VBoxContainer/HBoxContainer/Sliders/CameraLook/HSlider" to="." method="_on_cameralook_value_changed"]
[connection signal="pressed" from="Center/VBoxContainer/Back" to="." method="_on_Play_pressed"]
